--- a/.github/workflows/push_win.yml
+++ b/.github/workflows/push_win.yml
@@ -9,6 +9,7 @@ jobs:
       matrix:
         python-version: [3.10.4]
         os: [windows-latest]
+        runas: [administrator]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -29,4 +30,4 @@ jobs:
         python -m pip install pytest
     - name: Run Test
       run: |
-        pytest tests
+        runAs /user:Administrator "pytest tests"
