--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include pyproject.toml
 include requirements.testing.txt
-include template_python_cmd/assets/example.txt
+include src/sudo_win32/paexec.exe
