--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
 ]
 # Change this with the version number bump.
 # Also make the change in zcmds/version.py
-version = "1.0.2"
+version = "1.0.3"
 
 [tool.pylint."MESSAGES CONTROL"]
 good-names = [
@@ -34,3 +34,4 @@ ignore_missing_imports = true
 
 [project.scripts]
 sudo_win32 = "sudo_win32.cli:main"
+sudo = "sudo_win32.cli:main [sudo]"
