--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,11 @@ requires-python = ">=3.7"
 keywords = ["template-python-cmd"]
 license = { text = "BSD 3-Clause License" }
 classifiers = ["Programming Language :: Python :: 3"]
-# Change this with the version number bump.
-# Also make the change in zcmds/version.py
+dependencies = [
+    "py7zr"
+]
 version = "1.0.5"
+
 
 [tool.pylint."MESSAGES CONTROL"]
 good-names = [
